[project]
name = "absnexus"
version = "0.1.0"
description = "Structured finance DAG calculation builder"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "alembic>=1.13.0",
    "pyodbc>=5.1.0",
    "openpyxl>=3.1.2",
    "networkx>=3.2.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.26.0",
    "black>=24.1.0",
    "mypy>=1.8.0",
    "pylint>=3.0.0",
    "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 99

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pylint.messages_control]
# C0114/C0115/C0116: missing module/class/function docstring
# R0903: too-few-public-methods (noise for DAOs, schemas)
# E1136 (unsubscriptable-object): false positive for SQLAlchemy 2.0 `Mapped[T]` typing
# W0613 (unused-argument): we use `_`-prefixed params for FastAPI DI side-effect deps
disable = ["C0114", "C0115", "C0116", "R0903", "E1136", "W0613"]

[tool.pytest.ini_options]
testpaths = ["tests"]
